--- a/chip8/package.json
+++ b/chip8/package.json
@@ -2,7 +2,7 @@
   "name": "chip8-emulator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "dev": "npx tsx watch src/main.ts",
     "devNoWatch": "npx tsx src/main.ts"
