--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "chip8-emulator": "file:../chip8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
